--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,19 @@
     "name": "user/first_project",
     "description": "A php application for account",
     "type": "project",
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
     "autoload": {
         "psr-4": {
             "Framework\\": "src/Framework",
             "App\\": "src/App"
-        }
+        },
+        "files": ["src/App/Config/Routes.php",
+        "src/App/Config/Middleware.php"
+    ]
+    },
+    "scripts":{
+        "firstphp": "php cli.php"
     }
 }
-
